--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "endroid/qr-code": "^6.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "maatwebsite/excel": "^1.1"
+        "rap2hpoutre/fast-excel": "5.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
